--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "cypress": "cypress run --browser chrome",
     "test:ci": "craco test --reporters=jest-junit --reporters=default --watchAll=false --coverage --ci --runInBand",
     "eject": "craco eject"
   },
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
+    "cypress": "^8.4.0",
     "postcss": "7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.14"
   }
