--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,41 +2,43 @@ server {
     listen       80;
     server_name  localhost;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+    # CircleCI IP Ranges
+    # allow 107.22.40.20;
+    # allow 18.215.226.36;
+    # allow 3.228.208.40;
+    # allow 3.228.39.90;
+    # allow 3.91.130.126;
+    # allow 34.194.144.202;
+    # allow 34.194.94.201;
+    # allow 35.169.17.173;
+    # allow 35.174.253.146;
+    # allow 52.20.179.68;
+    # allow 52.21.153.129;
+    # allow 52.22.187.0;
+    # allow 52.3.128.216;
+    # allow 52.4.195.249;
+    # allow 52.5.58.121;
+    # allow 52.72.72.233;
+    # allow 52.72.73.201;
+    # allow 54.144.204.41;
+    # allow 54.161.182.76;
+    # allow 54.162.196.253;
+    # allow 54.164.161.41;
+    # allow 54.167.72.230;
+    # allow 54.205.138.102;
+    # allow 54.209.115.53;
+    # allow 54.211.118.70;
+    # allow 54.226.126.177;
+    # allow 54.81.162.133;
+    # allow 54.83.41.200;
+    # allow 54.92.235.88;
 
-        # CircleCI IP Ranges
-        allow 107.22.40.20;
-        allow 18.215.226.36;
-        allow 3.228.208.40;
-        allow 3.228.39.90;
-        allow 3.91.130.126;
-        allow 34.194.144.202;
-        allow 34.194.94.201;
-        allow 35.169.17.173;
-        allow 35.174.253.146;
-        allow 52.20.179.68;
-        allow 52.21.153.129;
-        allow 52.22.187.0;
-        allow 52.3.128.216;
-        allow 52.4.195.249;
-        allow 52.5.58.121;
-        allow 52.72.72.233;
-        allow 52.72.73.201;
-        allow 54.144.204.41;
-        allow 54.161.182.76;
-        allow 54.162.196.253;
-        allow 54.164.161.41;
-        allow 54.167.72.230;
-        allow 54.205.138.102;
-        allow 54.209.115.53;
-        allow 54.211.118.70;
-        allow 54.226.126.177;
-        allow 54.81.162.133;
-        allow 54.83.41.200;
-        allow 54.92.235.88;
-        deny all;
+    location / {
+      allow 3.112.88.104;
+      deny all;
+
+      root   /usr/share/nginx/html;
+      index  index.html index.htm;
     }
 
   error_page  500 502 503 504 /50x.html;
