--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,20 @@
-server {
-    listen       80;
-    server_name  localhost;
+geo $access_restrict {
+  default 1;
+  3.112.88.104 0;
+}
 
+server {
+  listen       80;
+  server_name  ip-ranges.cloud-run.tadashi-cci.com;
+
+  set $restrict = "off";
+  if ($access_restrict) {
+    set $restrict = 'on';
+  }
+
+  if ($restrict = "on") {
+    return 403;
+  }
     # CircleCI IP Ranges
     # allow 107.22.40.20;
     # allow 18.215.226.36;
@@ -32,14 +45,10 @@ server {
     # allow 54.81.162.133;
     # allow 54.83.41.200;
     # allow 54.92.235.88;
-
-    location / {
-      allow 3.112.88.104;
-      deny all;
-
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-    }
+  location / {
+    root   /usr/share/nginx/html;
+    index  index.html index.htm;
+  }
 
   error_page  500 502 503 504 /50x.html;
   location = /50x.html {
