--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,20 +1,7 @@
-geo $access_restrict {
-  default 1;
-  3.112.88.104 0;
-}
-
 server {
   listen       80;
   server_name  ip-ranges.cloud-run.tadashi-cci.com;
 
-  set $restrict = "off";
-  if ($access_restrict) {
-    set $restrict = 'on';
-  }
-
-  if ($restrict = "on") {
-    return 403;
-  }
     # CircleCI IP Ranges
     # allow 107.22.40.20;
     # allow 18.215.226.36;
@@ -45,9 +32,13 @@ server {
     # allow 54.81.162.133;
     # allow 54.83.41.200;
     # allow 54.92.235.88;
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
+
+    allow 106.72.170.130;
+    deny all;
   }
 
   error_page  500 502 503 504 /50x.html;
