--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
   listen       80;
   server_name  ip-ranges.cloud-run.tadashi-cci.com;
+  real_ip_header X-Forwarded-For;
 
     # CircleCI IP Ranges
     # allow 107.22.40.20;
