--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -38,6 +38,8 @@ server {
 
   # allow 106.72.170.130;
   # deny all;
+  proxy_set_header X-Forwarded-For;
+  $proxy_add_x_forwarded_for;
 
   location / {
     root   /usr/share/nginx/html;
