--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
   listen       80;
   server_name  ip-ranges.cloud-run.tadashi-cci.com;
+  access_log  /var/log/nginx/host.access.log  main;
 
     # CircleCI IP Ranges
     # allow 107.22.40.20;
@@ -38,8 +39,6 @@ server {
 
   # allow 106.72.170.130;
   # deny all;
-  proxy_set_header X-Forwarded-For;
-  $proxy_add_x_forwarded_for;
 
   location / {
     root   /usr/share/nginx/html;
