--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,6 @@
 server {
   listen       80;
   server_name  ip-ranges.cloud-run.tadashi-cci.com;
-  access_log  /var/log/nginx/host.access.log  main;
 
     # CircleCI IP Ranges
     # allow 107.22.40.20;
@@ -33,9 +32,9 @@ server {
     # allow 54.81.162.133;
     # allow 54.83.41.200;
     # allow 54.92.235.88;
-  # set_real_ip_from 0.0.0.0/0;
-  # real_ip_header X-Forwarded-For;
-  # real_ip_recursive on;
+  set_real_ip_from 0.0.0.0/0;
+  real_ip_header X-Forwarded-For;
+  real_ip_recursive on;
 
   # allow 106.72.170.130;
   # deny all;
