--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,9 +32,11 @@ server {
     # allow 54.81.162.133;
     # allow 54.83.41.200;
     # allow 54.92.235.88;
-  set_real_ip_from 0.0.0.0/0;
-  real_ip_header X-Forwarded-For;
-  real_ip_recursive on;
+  set_real_ip_from 130.211.0.0/22;
+  set_real_ip_from 35.191.0.0/16;
+  # set_real_ip_from 35.186.x.x;
+  real_ip_header   X-Forwarded-For;
+  # real_ip_recursive on;
 
   # allow 106.72.170.130;
   # deny all;
