--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,7 +33,7 @@ server {
     # allow 54.83.41.200;
     # allow 54.92.235.88;
   set_real_ip_from 169.254.8.129;
-  # set_real_ip_from 35.186.x.x;
+  set_real_ip_from 240b:10:aa82:2f00:a53e:411a:a1a9:89dd;
   real_ip_header   X-Forwarded-For;
   # real_ip_recursive on;
 
