--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run: npm run cypress
 
 workflows:
-  test_and_deploy: 
+  cypress: 
     jobs:
       - install_cypress
       - cypress_with_ip_ranges:
