--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "6.3.0",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
@@ -11,20 +10,20 @@
     "@types/node": "14.18.5",
     "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
-    "jest-junit": "12.3.0",
+    "jest-junit": "13.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.0",
     "typescript": "4.5.4",
     "web-vitals": "2.1.3"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "cypress": "cypress run --browser chrome",
-    "test:ci": "craco test --reporters=jest-junit --reporters=default --watchAll=false --coverage --ci --runInBand",
-    "eject": "craco eject"
+    "test:ci": "react-scripts test --reporters=jest-junit --reporters=default --watchAll=false --coverage --ci --runInBand",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,9 +44,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "10.3.7",
+    "autoprefixer": "10.4.2",
     "cypress": "8.7.0",
-    "postcss": "7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@2.2.17"
+    "postcss": "8.4.5",
+    "tailwindcss": "3.0.12"
   }
 }
