--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   cypress: cypress-io/cypress@1.29.0
+  node: circleci/node@5.0.0
 
 jobs:
   install_cypress:
@@ -32,6 +33,14 @@ jobs:
       - run: npm run cypress
 
 workflows:
+  build_and_deploy_heroku:
+    - node/test:
+        run-command: test:ci
+        test-results-for: jest
+    - node/run:
+        name: build
+        npm-run: build
+
   cypress: 
     jobs:
       - install_cypress
@@ -41,6 +50,3 @@ workflows:
       - cypress_without_ip_ranges:
           requires:
             - install_cypress
-          filters:
-            branches:
-              only: master
