--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ orbs:
 
 jobs:
   deploy_heroku:
-    machine: true
+    machine:
+      image: ubuntu-2004:202111-01
     steps:
     - checkout
     - heroku/install
